--- a/src/Dyoub.App/Views/Commercial/RentContractCustomer/RentContractCustomerEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentContractCustomer/RentContractCustomerEdit.cshtml
@@ -24,6 +24,9 @@
             <span class="separator"></span>
             <a href="/rent-contracts/edit/{{controller.routeParams.rentContractId}}/payments"
                class="step" data-translate="Payments"></a>
+            <span class="separator"></span>
+            <a href="/rent-contracts/details/{{controller.routeParams.rentContractId}}/return"
+               class="step" data-translate="Return"></a>
         </div>
     </div>
 
