--- a/src/Dyoub.App/Views/Commercial/RentContracts/RentContractList.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentContracts/RentContractList.cshtml
@@ -110,6 +110,8 @@
                             <i class="fa fa-clock-o"></i>
                             <span data-ng-bind="rentContract.startTime"></span>
                         </p>
+                        <div class="hint warning" data-ng-show="rentContract.returnPending"
+                             data-translate="Return pending"></div>
                     </div>
                 </div>
             </div>
