--- a/src/Dyoub.App/Views/Commercial/RentPayments/RentPaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentPayments/RentPaymentsEdit.cshtml
@@ -24,6 +24,9 @@
                class="step" data-translate="Products"></a>
             <span class="separator"></span>
             <span class="step active" data-translate="Payments"></span>
+            <span class="separator"></span>
+            <a href="/rent-contracts/details/{{controller.routeParams.rentContractId}}/return"
+               class="step" data-translate="Return"></a>
         </div>
     </div>
 
