--- a/src/Dyoub.App/Views/Commercial/RentedProducts/RentedProductsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentedProducts/RentedProductsDetails.cshtml
@@ -13,9 +13,9 @@
     <div class="step-header">
         <div class="page-header">
             <span data-translate="Rent contract"></span>
-            <strong data-ng-bind="controller.rentContract.id | orderNumber"></strong>
+            <strong data-ng-bind="controller.routeParams.rentContractId | orderNumber"></strong>
         </div>
-        <div data-ng-show="controller.routeParams.rentContractId">
+        <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <a href="/rent-contracts/details/{{controller.routeParams.rentContractId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
