--- a/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SaleItems/SaleItemsDetails.cshtml
@@ -13,9 +13,9 @@
     <div class="step-header">
         <div class="page-header">
             <span data-translate="Sale order"></span>
-            <strong data-ng-bind="controller.saleOrder.id | orderNumber"></strong>
+            <strong data-ng-bind="controller.routeParams.saleOrderId | orderNumber"></strong>
         </div>
-        <div data-ng-show="controller.routeParams.saleOrderId">
+        <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <a href="/sale-orders/details/{{controller.routeParams.saleOrderId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
