--- a/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsDetails.cshtml
@@ -10,12 +10,12 @@
 }
 
 <div class="container" data-ng-controller="SalePaymentsDetailsController as controller" data-ng-init="controller.init()">
-    <div class="step-header ng-cloak">
+    <div class="step-header">
         <div class="page-header">
             <span data-translate="Sale order"></span>
-            <strong class="text-muted" data-ng-bind="controller.saleOrder.id | orderNumber"></strong>
+            <strong data-ng-bind="controller.routeParams.saleOrderId | orderNumber"></strong>
         </div>
-        <div data-ng-show="controller.routeParams.saleOrderId">
+        <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <a href="/sale-orders/details/{{controller.routeParams.saleOrderId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
