--- a/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/SalePayments/SalePaymentsEdit.cshtml
@@ -8,12 +8,12 @@
 }
 
 <div class="container" data-ng-controller="SalePaymentsEditController as controller" data-ng-init="controller.init()">
-    <div class="step-header ng-cloak">
+    <div class="step-header">
         <div class="page-header">
             <span data-translate="Edit sale order"></span>
             <strong data-ng-bind="controller.routeParams.saleOrderId | orderNumber"></strong>
         </div>
-        <div data-ng-show="controller.routeParams.saleOrderId">
+        <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <a href="/sale-orders/edit/{{controller.routeParams.saleOrderId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
