--- a/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchaseOrders/PurchaseOrderDetails.cshtml
@@ -10,12 +10,12 @@
 }
 
 <div class="container" data-ng-controller="PurchaseOrderDetailsController as controller" data-ng-init="controller.init()">
-    <div class="step-header ng-cloak">
+    <div class="step-header">
         <div class="page-header">
             <span data-translate="Purchase order"></span>
-            <strong data-ng-bind="controller.purchaseOrder.id | orderNumber"></strong>
+            <strong data-ng-bind="controller.routeParams.purchaseOrderId | orderNumber"></strong>
         </div>
-        <div data-ng-show="controller.routeParams.purchaseOrderId">
+        <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <span class="step active" data-translate="General"></span>
             <span class="separator"></span>
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}/supplier"
