--- a/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsDetails.cshtml
+++ b/src/Dyoub.App/Views/Inventory/PurchasedProducts/PurchasedProductsDetails.cshtml
@@ -13,9 +13,9 @@
     <div class="step-header">
         <div class="page-header">
             <span data-translate="Purchase order"></span>
-            <strong data-ng-bind="controller.purchaseOrder.id | orderNumber"></strong>
+            <strong data-ng-bind="controller.routeParams.purchaseOrderId | orderNumber"></strong>
         </div>
-        <div data-ng-show="controller.routeParams.purchaseOrderId">
+        <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <a href="/purchase-orders/details/{{controller.routeParams.purchaseOrderId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
