Rent contract partners

--- a/src/Dyoub.App/Views/Commercial/RentContractCustomer/RentContractCustomerEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentContractCustomer/RentContractCustomerEdit.cshtml
@@ -17,6 +17,9 @@
             <a href="/rent-contracts/edit/{{controller.routeParams.rentContractId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
+            <a href="/rent-contracts/edit/{{controller.routeParams.rentContractId}}/partners"
+               class="step" data-translate="Partners"></a>
+            <span class="separator"></span>
             <span class="step active" data-translate="Customer"></span>
             <span class="separator"></span>
             <a href="/rent-contracts/edit/{{controller.routeParams.rentContractId}}/products"
