--- a/src/Dyoub.App/Views/Commercial/RentContracts/RentContractEdit.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentContracts/RentContractEdit.cshtml
@@ -16,6 +16,9 @@
         <div class="ng-cloak" data-ng-hide="controller.searching || controller.notFound">
             <span class="step active" data-translate="General"></span>
             <span class="separator"></span>
+            <a href="/rent-contracts/edit/{{controller.routeParams.rentContractId}}/partners"
+               class="step" data-translate="Partners"></a>
+            <span class="separator"></span>
             <a href="/rent-contracts/edit/{{controller.routeParams.rentContractId}}/customer"
                class="step" data-translate="Customer"></a>
             <span class="separator"></span>
