--- a/src/Dyoub.App/Views/Commercial/RentedProducts/RentedProductsDetails.cshtml
+++ b/src/Dyoub.App/Views/Commercial/RentedProducts/RentedProductsDetails.cshtml
@@ -19,6 +19,9 @@
             <a href="/rent-contracts/details/{{controller.routeParams.rentContractId}}"
                class="step" data-translate="General"></a>
             <span class="separator"></span>
+            <a href="/rent-contracts/details/{{controller.routeParams.rentContractId}}/partners"
+               class="step" data-translate="Partners"></a>
+            <span class="separator"></span>
             <a href="/rent-contracts/details/{{controller.routeParams.rentContractId}}/customer"
                class="step" data-translate="Customer"></a>
             <span class="separator"></span>
